@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-06-11T01:01:14Z",
-  "count_outdated" : 1682,
-  "uniques_outdated" : 928,
+  "timestamp" : "2024-06-12T01:01:18Z",
+  "count_outdated" : 1683,
+  "uniques_outdated" : 929,
   "count" : 1691,
   "uniques" : 937,
   "clones" : [
-    {
-      "timestamp": "2024-05-29T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-30T00:00:00Z",
       "count": 1,
