@@ -1,12 +1,7 @@
 {
-  "count": 9,
-  "uniques": 4,
+  "count": 8,
+  "uniques": 3,
   "clones": [
-    {
-      "timestamp": "2024-05-29T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-05-30T00:00:00Z",
       "count": 1,
